k8s/zcp-admin-portal-ui-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zcp-admin-portal-ui
  labels:
    app: zcp-admin-portal-ui
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: zcp-admin-portal-ui
    spec:
      containers:
      - name: zcp-admin-portal-ui
        image: cloudzcp/zcp-admin-portal-ui:develop
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        - containerPort: 443  
      hostAliases:
      - hostnames:
        - sre-iam.cloudzcp.io
        ip: 10.174.2.237
