k8s/zcp-admin-portal-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zcp-admin-portal-ui
spec:
  selector:
    run: zcp-admin-portal-ui
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  type: NodePort
