k8s/zcp-estimate-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zcp-estimate-ui-service
spec:
  selector:
    run: zcp-estimate-ui
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  type: NodePort
